--- a/styles/style.css
+++ b/styles/style.css
@@ -60,15 +60,16 @@ div{
     box-sizing: border-box;
 }
 #button{
-	background: transparent;
-	color: #ffffff;
+	background: #ffffff;
+	color: #000000;
 	width: 20%;
-	padding: 15px;
+	padding: 1rem;
 	font-family: Montserrat, sans-serif;
 	border: 2px solid #ffffff;
-	font-size: 20px;
+	font-size: 1em;
 	transition: 0.6s; 
 }
+
 #button:hover{
 	transform: scale(1.1);
 }
